--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,14 @@
         android:textColor="@android:color/white"
         android:backgroundTint="@color/colorAccent"/>
 
+        <com.shobhitpuri.custombuttons.GoogleSignInButton
+            android:id="@+id/google_signIn_btn"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/google_sign_in"
+            app:isDarkTheme="true" />
+
     <TextView
         android:id="@+id/login_activity_register_text"
         android:layout_width="wrap_content"
